# HCurlExamples

./: .gitignore  CMakeLists.txt
HCurlProjection/: CMakeLists.txt  HCurlProjection.cpp  Projected_sol.nb
HelmholtzExample/: CMakeLists.txt  Helmholtz.cpp  Helmholtz_sol.nb  convergenceRates.nb  main.cpp
Sphere/: CMakeLists.txt  HCurlSphere.cpp
